# nba-scout-2

./: .gitignore
nba_scraper/: .env.development  .env.example  .env.staging  .env.test  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEV_NOTES.md  MIGRATIONS_QUICK_REF.md  MIGRATIONS_SETUP.md  Makefile  README.md  SCHEDULER_README.md  TASKS.md  TROUBLESHOOTING.md  alembic.ini  clear_database.py  conftest.py  db_migrations_foundations.sql  debug_arena.py  debug_early_fouls.py  debug_error.py  debug_games_bridge.py  debug_pipeline_error.py  debug_test_data.py  migrate.py  populate_games.py  populate_games_test.py  pyproject.toml  pytest.ini  safe_incremental_migration.sql  safe_incremental_migration_fixed.sql  schema.sql  setup-dev.sh  team_aliases.yaml  test_advanced_metrics.py  test_analytics_demo.py  test_backfill_path.py  test_comprehensive_api_integration.py  (+31 more)
nba_scraper/.github/: copilot-instructions.md
nba_scraper/.github/PULL_REQUEST_TEMPLATE/: strict-validation.md
nba_scraper/.github/workflows/: ci.yml  migrations.yml
nba_scraper/alembic/: README.md  env.py
nba_scraper/alembic/versions/: 001_baseline_schema.py
nba_scraper/docs/runbooks/: backfill_checklist.md
nba_scraper/ops/: quarantine_game_ids.txt
nba_scraper/ops/cron/: run_daily.sh
nba_scraper/review_bundle_20251005_093034/: pyproject.toml  repo_tree.txt  src_key.tgz  tests_key.tgz
nba_scraper/sql/: create_ingest_watermarks.sql  health_checks.sql  rollback_game.sql
nba_scraper/src/nba_scramer/models/: pbp_rows.py
nba_scraper/src/nba_scraper/: __init__.py  cli.py  config.py  db.py  http.py  logging.py  monitoring.py  nba_logging.py  performance.py  py.typed  rate_limit.py  resilience.py  validation.py
nba_scraper/src/nba_scraper/db/: writers.py
nba_scraper/src/nba_scraper/extractors/: __init__.py  boxscore.py  bref.py  gamebooks.py  games_bridge.py  lineups.py  nba_stats.py  pbp.py  play_by_play.py  shots.py
nba_scraper/src/nba_scraper/io_clients/: __init__.py  bref.py  gamebooks.py  nba_stats.py
nba_scraper/src/nba_scraper/loaders/: __init__.py  advanced_metrics.py  derived.py  facade.py  games.py  lineups.py  pbp.py  play_by_play.py  refs.py  shots.py
nba_scraper/src/nba_scraper/models/: __init__.py  crosswalk_rows.py  derived_rows.py  enums.py  game_rows.py  games.py  injury_rows.py  lineup_rows.py  lineups.py  nba_stats_enums.py  pbp.py  pbp_rows.py  ref_rows.py  shots.py  utils.py
nba_scraper/src/nba_scraper/pipelines/: __init__.py  analytics_pipeline.py  backfill.py  daily.py  derive.py  foundation.py  game_pipeline.py  nba_stats_pipeline.py  season_pipeline.py  source_pipelines.py  validate.py
nba_scraper/src/nba_scraper/raw_io/: __init__.py  backfill.py  client.py  persist.py  report.py
nba_scraper/src/nba_scraper/schedule/: __init__.py  discovery.py  jobs.py
nba_scraper/src/nba_scraper/silver/: __init__.py  raw_reader.py  transform_games.py  transform_officials.py  transform_pbp.py  transform_shots.py  transform_starters.py
nba_scraper/src/nba_scraper/state/: __init__.py  watermarks.py
nba_scraper/src/nba_scraper/tools/: __init__.py  print_game_bridge.py  raw_harvest_date.py  raw_harvest_season.py  rollback_game.py  run_single_game.py  silver_load_date.py
nba_scraper/src/nba_scraper/transformers/: __init__.py  early_shocks.py  gamebooks.py  games.py  games_bridge.py  lineups.py  pbp.py  pbp_windows.py  q1_window.py  refs.py  schedule_travel.py  shots.py
nba_scraper/src/nba_scraper/utils/: __init__.py  clock.py  clock_parsing.py  coerce.py  date_norm.py  dates.py  db.py  preprocess.py  preprocessing.py  season.py  season_utils.py  team_crosswalk.py  team_lookup.py  time.py
nba_scraper/tests/: conftest.py  test_e2e_backfill.py
nba_scraper/tests/cli/: test_cli_smoke.py
nba_scraper/tests/e2e/: test_pipeline_smoke.py  utils.py
nba_scraper/tests/integration/: test_end_to_end_sample_date.py  test_foundation_pipeline.py  test_games_bridge_integration.py  test_harvest_smoke.py  test_live_api.py  test_pipeline_bridge.py  test_pipeline_facade.py  test_refactored_architecture.py  test_single_game_etl.py  test_upsert_game_bridge.py  validation_test.py
nba_scraper/tests/smoke/: test_cli_imports.py  test_imports.py  test_silver_runner.py
nba_scraper/tests/unit/: test_bref_crosswalk_resolver.py  test_clock_parsing.py  test_coerce.py  test_datetime_guards.py  test_deprecations_guard.py  test_derived_loader.py  test_early_shocks.py  test_foundation_validation.py  test_gamebooks.py  test_gamebooks_parsing.py  test_gamebooks_transformer.py  test_games_bridge.py  test_games_bridge_new.py  test_loader_facade.py  test_loader_facade_binds.py  test_migrations_contract.py  test_pbp_clock_handling.py  test_pbp_windows_clock_safe.py  test_pbp_windows_possession.py  test_persist.py  test_preprocess.py  test_preprocess_guards.py  test_q1_window.py  test_schedule_travel.py  test_scheduler_jobs.py  test_scheduler_watermarks.py  test_season_derivation.py  test_transformers_games.py
src/nba_scraper/extractors/: pbp.py
