[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nba-scraper"
version = "1.0.0"
description = "Production-grade NBA Historical Scraping & Ingestion Engine"
authors = [{name = "NBA Scout", email = "contact@nbascout.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",  # Added missing dependency
    "pandas>=2.2.0",  # Updated for Python 3.13 compatibility
    "numpy>=1.26.0",
    "python-dateutil>=2.8.2",
    "rapidfuzz>=3.6.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "nba-api>=1.4.1",  # Added for reliable shot chart data
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.0",
    "selectolax>=0.3.17",
    "pypdf>=3.17.0",
    "pdfminer.six>=20231228",
    "typer>=0.9.0",
    "haversine>=2.8.1",
    "structlog>=23.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "types-python-dateutil>=2.8.19.14",
    "types-pyyaml>=6.0.12.12",
    "black>=23.0.0",
]

[project.scripts]
nba-scraper = "nba_scraper.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["S101", "S603", "S607", "PLR0913", "PLR0912", "C901", "PLR0915"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"